--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -11,19 +11,18 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:id="@+id/ivClaseBanner"
+            android:layout_width="match_parent"
             android:layout_height="175dp"
             android:contentDescription="@string/classicon"
-            android:scaleType="centerCrop"
-            android:scrollY="-130dp"
+            android:scaleType="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.025"
-            tools:srcCompat="@drawable/palad_n" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvName"
@@ -37,10 +36,10 @@
             android:textAlignment="center"
             android:textSize="35sp"
             android:textStyle="italic"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/ivClaseBanner"
             app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/ivClaseBanner"
+            app:layout_constraintTop_toBottomOf="@+id/ivClaseBanner" />
 
         <ImageView
             android:id="@+id/ivObjetos"
