Ahora el teclado se oculta al pulsar con el dedo fuera de cualquier cuadro de texto

--- a/app/src/main/res/layout/fragment_add_personaje3.xml
+++ b/app/src/main/res/layout/fragment_add_personaje3.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.personaje.AddPersonajeFragment3"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="-22dp">
+    tools:context=".ui.personaje.AddPersonajeFragment3">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
