--- a/app/src/main/res/layout/fragment_arma.xml
+++ b/app/src/main/res/layout/fragment_arma.xml
@@ -36,7 +36,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tfCalidad"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:hint="@string/calidadArma"
@@ -47,11 +47,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
                 android:id="@+id/etCalidad"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="number"
+                android:inputType="none"
+                tools:ignore="LabelFor"
                 tools:layout_editor_absoluteX="19dp"
                 tools:layout_editor_absoluteY="100dp" />
 
