--- a/app/src/main/res/layout/fragment_add_escudo.xml
+++ b/app/src/main/res/layout/fragment_add_escudo.xml
@@ -15,7 +15,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="216dp"
             android:layout_height="60dp"
-            android:hint="@string/arma"
+            android:hint="@string/escudo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.2"
@@ -24,7 +24,7 @@
             app:layout_constraintVertical_bias="0.04">
 
             <AutoCompleteTextView
-                android:id="@+id/etNombreArma"
+                android:id="@+id/etNombreEscudo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="none"
@@ -81,29 +81,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tfTurno"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:hint="@string/turno"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.128"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.339">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etTurno"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="339dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tfHabilidadDeAtaque"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="100dp"
@@ -111,9 +88,10 @@
             android:hint="@string/habilidadDeAtaque"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.125"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.339">
+            app:layout_constraintVertical_bias="0.338">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etHabilidadDeAtaque"
@@ -133,7 +111,7 @@
             android:hint="@string/damage"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.874"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.338">
@@ -157,10 +135,10 @@
             android:hint="@string/parry"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.128"
+            app:layout_constraintHorizontal_bias="0.874"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.442">
+            app:layout_constraintVertical_bias="0.317">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etParada"
@@ -181,7 +159,7 @@
             android:hint="@string/value"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.315"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.442">
@@ -205,7 +183,7 @@
             android:hint="@string/peso"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.874"
+            app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.442">
