--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -41,6 +41,22 @@
             app:layout_constraintStart_toStartOf="@+id/ivClaseBanner"
             app:layout_constraintTop_toBottomOf="@+id/ivClaseBanner" />
 
+        <TextView
+            android:id="@+id/tvClase"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="4dp"
+            android:paddingStart="10dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="10dp"
+            android:text="@string/clase"
+            android:textAlignment="textStart"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/tvName"
+            app:layout_constraintStart_toStartOf="@+id/tvName"
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+
         <ImageView
             android:id="@+id/ivObjetos"
             android:layout_width="100dp"
@@ -50,21 +66,21 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.884"
+            app:layout_constraintVertical_bias="0.922"
             app:srcCompat="@drawable/bandit"
             tools:ignore="ContentDescription" />
 
         <ImageView
-            android:id="@+id/ivArmas"
+            android:id="@+id/ivInfo"
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.729"
+            app:layout_constraintHorizontal_bias="0.273"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.494"
-            app:srcCompat="@drawable/knight"
+            app:layout_constraintVertical_bias="0.532"
+            app:srcCompat="@drawable/spellbook"
             tools:ignore="ContentDescription" />
 
         <ImageView
@@ -76,7 +92,7 @@
             app:layout_constraintHorizontal_bias="0.273"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.687"
+            app:layout_constraintVertical_bias="0.725"
             app:srcCompat="@drawable/armor"
             tools:ignore="ContentDescription" />
 
@@ -89,21 +105,21 @@
             app:layout_constraintHorizontal_bias="0.729"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.687"
+            app:layout_constraintVertical_bias="0.725"
             app:srcCompat="@drawable/shield"
             tools:ignore="ContentDescription" />
 
         <ImageView
-            android:id="@+id/ivInfo"
+            android:id="@+id/ivArmas"
             android:layout_width="100dp"
             android:layout_height="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.273"
+            app:layout_constraintHorizontal_bias="0.729"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.494"
-            app:srcCompat="@drawable/spellbook"
+            app:layout_constraintVertical_bias="0.532"
+            app:srcCompat="@drawable/knight"
             tools:ignore="ContentDescription" />
 
 
