--- a/app/src/main/res/layout/fragment_add_objeto.xml
+++ b/app/src/main/res/layout/fragment_add_objeto.xml
@@ -88,7 +88,7 @@
             app:layout_constraintVertical_bias="0.339">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etHabilidadDeAtaque"
+                android:id="@+id/etCantidad"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:inputType="number"
