--- a/app/src/main/res/layout/fragment_personajes.xml
+++ b/app/src/main/res/layout/fragment_personajes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".framework.rvPersonaje.RVPersonajeFragment">
+    tools:context=".framework.personaje.RVPersonajeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:context=".framework.rvPersonaje.RVPersonajeFragment"
+            tools:context=".framework.personaje.RVPersonajeFragment"
             tools:listitem="@layout/card_personaje_fragment" />
 
 
