--- a/app/src/main/res/layout/fragment_add_personaje1.xml
+++ b/app/src/main/res/layout/fragment_add_personaje1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".framework.personaje.AddPersonajeFragment1">
+    tools:context=".framework.fragmentsAddPersonaje.AddPersonajeFragmentText">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
