--- a/app/src/main/res/layout/fragment_add_personaje2.xml
+++ b/app/src/main/res/layout/fragment_add_personaje2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".framework.personaje.AddPersonajeFragment2">
+    tools:context=".framework.fragmentsAddPersonaje.AddPersonajeFragmentStats">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
